<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">标题:</string>
    <string name="title_create">新便签</string>
    <string name="title_notes_list">Notes</string>
    <string name="title_notes_search">搜索</string>


    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">删除</string>
    <string name="menu_open">打开</string>
    <string name="menu_revert">取消修改</string>
    <string name="menu_copy">拷贝</string>
    <string name="menu_paste">粘贴</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_color">Color</string>
    <string name="menu_voice">voice</string>
    <string name="createTime_sort">sort by createTime</string>
    <string name="modifyTime_sort">sort by modifyTime</string>
    <string name="color_sort">sort by color</string>


    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">编辑标题</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>

    <string name="menu_fontColor">fontColor</string>
    <string name="menu_fontSize">字体大小</string>
    <string name="font_10">font_10</string>
    <string name="font_20">font_20</string>
    <string name="font_30">font_30</string>
    <string name="font_40">font_40</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
</resources>